--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<h2>La conversion approche</h2>
 						<p>Un rêve, un projet ? Plus que ça, une conversion.</p>
 					</header>
-					<span class="image"><img src="images/pic01.jpg" alt="" style="object-fit: contain; object-position: center; border-radius: 50%; background: none;" /></span>
+					<span class="image"><img src="images/pic01.jpg" alt="Banner" style="object-fit: contain; object-position: center; border-radius: 50%; background: none;" /></span>
 				</div>
 			</section>
 
