--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 						<h2>La conversion approche</h2>
 						<p>Un rêve, un projet ? Plus que ça, une conversion.</p>
 					</header>
-					<span class="image"><img src="images/pic01.jpg" alt="Banner" style="object-fit: contain; object-position: center; border-radius: 10%; background: none;" /></span>
+					<span class="image">
+  <img src="images/pic01.jpg" alt="" 
+       style="object-fit: cover; object-position: center top; border-radius: 35%; transform: translateY(-10%);" />
+</span>
 				</div>
 			</section>
 
