lien cagnotte ajouté

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</header>
 					<p>Chaque contribution compte et nous aide à financer les différentes étapes de son parcours.</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary">Participer</a></li>
+						<li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171?utm_source=copylink&utm_medium=social_sharing&fbclid=PAY2xjawIlcCBleHRuA2FlbQIxMQABpsuRfaTy5J89nynmI2mcYubL1AVPtnsN5V-Azm0u0KJ231vh6yqy_VuNJQ_aem_QKkrx9uKD2PPpi4zz_xm8Q" class="button primary">Participer</a></li>
 					</ul>
 				</div>
 			</section>
