Test affichage cagnotte

--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
 				</div>
 			</section>
 
+			<section id="cagnotte" class="spotlight style2 right">
+    			<div class="content">
+      				<header>
+        				<h2>Soutenez la cagnotte</h2>
+      				</header>
+      				<iframe 
+        			src="https://www.leetchi.com/fr/c/conversion-theo-1958171" 
+        			width="100%" height="500" frameborder="0" 
+        			style="border:none; overflow:hidden;">
+      				</iframe>
+    			</div>
+			</section>
+
 			<!-- Section Contact -->
 			<section id="contact" class="wrapper style1 special fade-up">
 				<div class="container">
