--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
 <!-- Section Cagnotte -->
 <section id="cagnotte" class="spotlight style2 right">
-  <div class="content">
+  	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
+	<div class="content">
     <header>
       <h2>Soutenez la cagnotte</h2>
       <p>Participez pour aider notre ami dans son projet personnel.</p>
