--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<h2>Ce que nous avons fait</h2>
 							<p>Découvrez les actions et étapes de notre projet.</p>
 						</header>
-						<p>Nous avons documenté notre parcours et les différentes initiatives que nous avons mises en place pour soutenir notre ami dans son projet personnel.</p>
+						<p>Nous travaillons dur pour documenter notre parcours et les différentes initiatives que nous avons mises en place pour réaliser notre projet avec notre ami Théo. Cette section sera bientôt prête.</p>
 					</div>
 				</div>
 			</section>
