--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#projet">Notre projet</a></li>
-						<li><a href="#cagnotte">Cagnotte</a></li>
+						<li><a href="cagnotte.html">La cagnotte</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -46,7 +46,7 @@
 							<h2>Ce que nous avons fait</h2>
 							<p>Découvrez les actions et étapes de notre projet.</p>
 						</header>
-						<p>Nous travaillons dur pour documenter notre parcours et les différentes initiatives que nous avons mises en place pour réaliser notre projet avec notre ami Théo. Cette section sera bientôt prête.</p>
+						<p style="text-align: justify;">Nous travaillons dur pour documenter notre parcours et les différentes initiatives que nous avons mises en place pour réaliser notre projet avec notre ami Théo. Cette section sera bientôt prête.</p>
 					</div>
 				</div>
 			</section>
@@ -56,7 +56,7 @@
   	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
 	<div class="content">
     <header>
-      <h2>Soutenez la cagnotte</h2>
+      <h2><a href="cagnotte.html">Soutenez la cagnotte</a></h2>
       <p>Participez pour aider notre ami dans son projet personnel.</p>
     </header>
 
