--- a/cagnotte.html
+++ b/cagnotte.html
@@ -48,7 +48,9 @@
 						<ul>
 							<li><a href="https://www.instagram.com/pablo._m_v/">pablo._m_v</a></li>
 							<li><a href="https://www.instagram.com/duo_discus/">duo_discus</a></li>
-							<a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary">Partciper</a>
+							<div style="text-align: center;">
+  								<a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary">Participer</a>
+							</div>
 						</ul>
 					</section>
 
