--- a/cagnotte.html
+++ b/cagnotte.html
@@ -43,9 +43,9 @@
 						<p style="text-align: justify;">
 							<a href="https://www.leetchi.com/fr/c/conversion-theo-1958171"><span class="image right"><img src="images/Leetchi.png" alt="" /></span></a>Au moment de choisir le système pour récolter les dons, la cagnotte en ligne Leetchi s’est imposée comme une évidence. Son utilisation est très simple, tant pour le donateur que pour l’organisateur, permettant de contribuer rapidement tout en nous laissant plus de temps pour organiser d’autres projets. Leetchi est également très accessible, que ce soit depuis un ordinateur ou via son application mobile. Nous voulions que l’objectif de 900 000 € soit très visible, et l’interface de Leetchi nous permet d’afficher clairement cet objectif. De plus, il est facile de partager la cagnotte grâce à un simple lien. Enfin, et surtout, nous tenons à ce que toutes les transactions se fassent dans une sécurité optimale, Leetchi bénéficiant de plus de 10 ans d’expérience et de 22 millions d’utilisateurs.
 						</p>
-						<div style="text-align: center;">
-  								<a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary">Participer</a>
-							</div>
+						<ul class="actions special">
+  							<li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary">Participer</a></li>
+						</ul>
 						<h3>Les donateurs</h3>
 						<p style="text-align: justify;">Pour l'instant, les dons sont l'unique source de revenu du projet. Ainsi, nous remercions avec une attention toute particulière nos 2 donateurs. Nous vous permettons ici de les remercier à votre tour en visitant leurs réseaux sociaux.</p>
 						<ul>
