--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
 	<div class="content">
     <header>
-      <h2><a href="cagnotte.html">Soutenez la cagnotte</a></h2>
+      <h2><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary" target="_blank">Soutenez la cagnotte</a></h2>
       <p>Participez pour aider notre ami dans son projet personnel.</p>
     </header>
 
@@ -87,7 +87,7 @@
 
     <!-- Bouton -->
     <ul class="actions" style="margin-top: 1em;">
-      <li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary" target="_blank">Participer</a></li>
+      <li><a href="cagnotte.html" class="button primary" target="_blank">Plus de détails</a></li>
     </ul>
   </div>
 </section>
