--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
 	<div class="content">
     <header>
-      <h2><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171">Soutenez la cagnotte</a></h2>
+      <h2><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" target="_blank" rel="noopener noreferrer">Soutenez la cagnotte</a></h2>
       <p>Participez pour aider notre ami dans son projet personnel.</p>
     </header>
 
@@ -111,10 +111,36 @@
 						<p>Retrouvez-nous sur les réseaux sociaux ou par email.</p>
 					</header>
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/theo_juif/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.tiktok.com/@theo_juif" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-						<li><a href="https://www.youtube.com/@Th%C3%A9oJuif" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
-						<li><a href="mailto:th3o.juif@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li>
+						  <a href="https://www.instagram.com/theo_juif/"
+						     target="_blank"
+						     rel="noopener noreferrer"
+						     class="icon brands alt fa-instagram">
+						    <span class="label">Instagram</span>
+						  </a>
+						</li>
+						<li>
+						  <a href="https://www.tiktok.com/@theo_juif"
+						     target="_blank"
+						     rel="noopener noreferrer"
+						     class="icon brands alt fa-tiktok">
+						    <span class="label">TikTok</span>
+						  </a>
+						</li>
+						<li>
+						  <a href="https://www.youtube.com/@Th%C3%A9oJuif"
+						     target="_blank"
+						     rel="noopener noreferrer"
+						     class="icon brands alt fa-youtube">
+						    <span class="label">YouTube</span>
+						  </a>
+						</li>
+						<li>
+						  <a href="mailto:th3o.juif@gmail.com"
+						     class="icon solid alt fa-envelope">
+						    <span class="label">Email</span>
+						  </a>
+						</li>
 					</ul>
 				</div>
 			</section>
