--- a/projet.html
+++ b/projet.html
@@ -41,7 +41,7 @@
 						<img src="images/pic02.jpg" alt="" class="image fit" />
 						<h3>Notre objectif</h3>
 						<p style="text-align: justify;">
-							Si nous sommes aussi impliqués dans ce projet, c'est qu'il est très important pour nous de répandre la foi juive, très critiquée, surtout en ce moment. Pour cela, nous avons demandé à un ami pour combien d'argent il serait prêt à accepter de se convertir au judaïsme. Après avoir obtenu son consentement, nous voilà lancés dans une folle course pour récolter les 900 000€ demandés.
+							Si nous sommes aussi impliqués dans ce projet, c'est qu'il est très important pour nous de répandre la foi juive, très critiquée, surtout en ce moment. Pour cela, nous avons demandé à un ami pour combien d'argent il serait prêt à se convertir au judaïsme. Après avoir obtenu son consentement, nous voilà lancés dans une folle course pour récolter les 900 000€ demandés.
 						</p>
 						<ul class="actions special">
   							<li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary" target="_blank" rel="noopener noreferrer">Participer</a></li>
