--- a/projet.html
+++ b/projet.html
@@ -44,7 +44,7 @@
 							Si nous sommes aussi impliqués dans ce projet, c'est qu'il est très important pour nous de répandre la foi juive, très critiquée, surtout en ce moment. Pour cela, nous avons demandé à un ami pour combien d'argent il serait prêt à se convertir au judaïsme. Après avoir obtenu son consentement, nous voilà lancés dans une folle course pour récolter les 900 000€ demandés.
 						</p>
 						<ul class="actions special">
-  							<li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary" target="_blank" rel="noopener noreferrer">Participer</a></li>
+  							<li><a href="cagnotte.html" class="button primary">En savoir plus</a></li>
 						</ul>
 						<h3>Nos actions</h3>
 						<p style="text-align: justify;">Nous vous présentons ici un aperçu de nos différentes actions.</p>
