--- a/projet.html
+++ b/projet.html
@@ -73,6 +73,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="duolingo.js"></script>
+			<script src="assets/js/duolingo.js"></script>
 	</body>
 </html>
