--- a/cagnotte.html
+++ b/cagnotte.html
@@ -21,7 +21,7 @@
 				<h1 id="logo"><a href="index.html">Théo Juif</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html#projet">Notre projet</a></li>
+						<li><a href="projet.html">Notre projet</a></li>
 						<li><a href="cagnotte.html">La cagnotte</a></li>
 						<li><a href="index.html#contact">Contact</a></li>
 					</ul>
