--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 id="logo"><a href="index.html">Théo Juif</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="#projet">Notre projet</a></li>
+						<li><a href="projet.html">Notre projet</a></li>
 						<li><a href="cagnotte.html">La cagnotte</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -56,8 +56,8 @@
   	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
 	<div class="content">
     <header>
-      <h2><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" target="_blank" rel="noopener noreferrer">Soutenez la cagnotte</a></h2>
-      <p>Participez pour aider notre ami dans son projet personnel.</p>
+      <h2><a href="cagnotte.html" class="button primary">Soutenez la cagnotte</a></h2>
+      <p><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" target="_blank" rel="noopener noreferrer">Participez pour aider notre ami dans son projet personnel.</a></p>
     </header>
 
     <p>Chaque contribution compte et nous aide à financer les différentes étapes de son parcours.</p>
