--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   	<span class="image fit main"><img src="images/pic03.jpg" alt="Cagnotte" /></span>
 	<div class="content">
     <header>
-      <h2><a href="cagnotte.html" class="button primary">Soutenez la cagnotte</a></h2>
-      <p><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" target="_blank" rel="noopener noreferrer">Participez pour aider notre ami dans son projet personnel.</a></p>
+      <h2><a href="cagnotte.html">Soutenez la cagnotte</a></h2>
+      <p>Participez pour aider notre ami dans son projet personnel.</p>
     </header>
 
     <p>Chaque contribution compte et nous aide à financer les différentes étapes de son parcours.</p>
