--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				<div class="content">
 					<div class="container">
 						<header>
-							<h2>Ce que nous avons fait</h2>
+							<h2><a href="projet.html">Ce que nous avons fait</a></h2>
 							<p>Découvrez les actions et étapes de notre projet.</p>
 						</header>
-						<p style="text-align: justify;">Nous travaillons dur pour documenter notre parcours et les différentes initiatives que nous avons mises en place pour réaliser notre projet avec notre ami Théo. Cette section sera bientôt prête.</p>
+						<p style="text-align: justify;">Nous travaillons dur pour faire connaître et mettre en œuvre notre projet</p>
 					</div>
 				</div>
 			</section>
