--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 							<h2><a href="projet.html">Ce que nous avons fait</a></h2>
 							<p>Découvrez les actions et étapes de notre projet.</p>
 						</header>
-						<p style="text-align: justify;">Nous travaillons dur pour faire connaître et mettre en œuvre notre projet</p>
+						    <ul class="actions" style="margin-top: 1em;">
+      						<li><a href="projet.html" class="button primary">S'informer</a></li>
+    						</ul>
 					</div>
 				</div>
 			</section>
