--- a/cagnotte.html
+++ b/cagnotte.html
@@ -47,10 +47,11 @@
   							<li><a href="https://www.leetchi.com/fr/c/conversion-theo-1958171" class="button primary" target="_blank" rel="noopener noreferrer">Participer</a></li>
 						</ul>
 						<h3>Les donateurs</h3>
-						<p style="text-align: justify;">Pour l'instant, les dons sont l'unique source de revenu du projet. Ainsi, nous remercions avec une attention toute particulière nos 2 donateurs. Nous vous permettons ici de les remercier à votre tour en visitant leurs réseaux sociaux.</p>
+							<p style="text-align: justify;">Pour l'instant, les dons sont l'unique source de revenu du projet. Ainsi, nous remercions avec une attention toute particulière nos <span id="donor-count"></span> donateurs. Nous vous permettons ici de les remercier à votre tour en visitant leurs réseaux sociaux.</p>
 						<ul>
 							<li><a href="https://www.instagram.com/pablo._m_v/" target="_blank" rel="noopener noreferrer">pablo._m_v</a></li>
 							<li><a href="https://www.instagram.com/duo_discus/" target="_blank" rel="noopener noreferrer">duo_discus</a></li>
+							<li><a href="https://www.instagram.com/lucasmat08/" target="_blank" rel="noopener noreferrer">lucasmat08</a></li>
 						</ul>
 					</section>
 
