--- a/cagnotte.html
+++ b/cagnotte.html
@@ -77,6 +77,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="donateurs.js"></script>
 
 	</body>
 </html>
