--- a/cagnotte.html
+++ b/cagnotte.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<h1 id="logo"><a href="index.html">Théo Juif</a></h1>
 				<nav id="nav">
-					<ul>
+					<ul id="donor-list">
 						<li><a href="projet.html">Notre projet</a></li>
 						<li><a href="cagnotte.html">La cagnotte</a></li>
 						<li><a href="index.html#contact">Contact</a></li>
